[package]
name = "pgroxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
bytes = "1.5.0"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
